feat(hash table): release v0.1 minimal functional implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,14 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 project(OpenHashTable VERSION 1.0)
 
-# --- Hash Functions ---
-add_library(hashFunc hash_functions/hash_functions.cpp)
-target_include_directories(hashFunc PUBLIC hash_functions)
-
-# --- Hash Table---
-add_library(hashTable INTERFACE)
-target_include_directories(hashTable INTERFACE hash_table)
+add_library(includes INTERFACE)
+target_include_directories(includes INTERFACE include)
 
 add_executable(OpenHashTable main.cpp)
-
-target_link_libraries(OpenHashTable PUBLIC hashFunc hashTable)
+target_link_libraries(OpenHashTable PUBLIC includes)
